<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 tag

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>
    <string name="app_name">Battery Viewer</string>
    <string name="app_version">Version</string>
    <string name="copyright">Copyright \u00A9 2015 School a-apps project.\nDesigned and developed by tag.</string>

    <string name="notificationContentText">-</string>

    <string name="switchDescription">-</string>
    <string name="text_not_available">N/A</string>
    <string name="imageView_contentDescription">-</string>
    <string name="text_hyphen">-</string>
    <string name="text_start">Start</string>
    <string name="text_stop">Stop</string>
    <string name="text_send">Send</string>
    <string name="text_services">Services:</string>
    <string name="text_intents">Intents:</string>
    <string name="text_or">OR</string>
    <string name="text_widget">Widget</string>
    <string name="text_notification">Notification</string>
    <string name="text_positive">Apply</string>
    <string name="text_negative">Cancel</string>
    <string name="text_milliseconds">milliseconds</string>

    <!-- Battery; Attributes -->
    <string name="battery_present">Present</string>
    <string name="battery_health">Health</string>
    <string name="battery_technology">Technology</string>
    <string name="battery_level">Remained</string>
    <string name="battery_status">Status</string>
    <string name="battery_temperature">Temperature</string>
    <string name="battery_voltage">Voltage</string>

    <!-- Battery: Health -->
    <string name="battery_health_unknown">Unknown</string>
    <string name="battery_health_good">Good</string>
    <string name="battery_health_overheat">Overheat</string>
    <string name="battery_health_dead">Dead</string>
    <string name="battery_health_over_voltage">Over voltage</string>
    <string name="battery_health_unspecified_failure">Unspecified failure</string>

    <!-- Battery: Plugged -->
    <string name="battery_plugged_ac">AC</string>
    <string name="battery_plugged_usb">USB</string>
    <string name="battery_plugged_wireless">Wireless</string>

    <!-- Battery: Status -->
    <string name="battery_status_unknown">Unknown</string>
    <string name="battery_status_charging">Charging</string>
    <string name="battery_status_discharging">Discharging</string>
    <string name="battery_status_not_charging">Not charging</string>
    <string name="battery_status_full">Full</string>

    <!-- Menu: Main Activity -->
    <string name="menuItem_batteryInfo">Battery info</string>
    <string name="menuItem_legends">Legends</string>
    <string name="menuItem_about">About</string>

    <!-- Activity: Battery Info -->
    <string name="battery_present_exist">Exist</string>
    <string name="battery_present_nil">Not exist</string>
    <string name="text_update">Update</string>
    <string name="batteryInfoTableTitle">Battery Info</string>

    <!-- Activity: Debug -->
    <string name="app_widget_update_service">Update widgets</string>
    <string name="action_battery_changed">Intent.ACTION_BATTERY_CHANGED</string>
    <string name="app_widget_update_service_for_1x1">AppWidget1x1UpdateService</string>
    <string name="app_widget_update_service_for_2x1">AppWidget2x1UpdateService</string>
    <string name="app_widget_service_restart_cycle">Restart cycle of app widget service</string>

    <!-- Activity: Legends - Color -->
    <string name="text_legendsBgColor">Widget background colors</string>
    <string name="widget_background_unknown_description">Unknown</string>
    <string name="widget_background_low_description">Low\n[0% - 15% of battery remaining]</string>
    <string name="widget_background_medium_description">Medium\n[16% - 50% of battery remaining]</string>
    <string name="widget_background_high_description">High\n[51 - 100% of battery remaining]</string>
    <string name="widget_background_charging_description">Battery charging</string>

    <!-- Activity: Legends - Icon -->
    <string name="text_legendsWidgetIcon">Widget icons</string>
    <string name="widget_icon_unknown_description">Unknown</string>
    <string name="widget_icon_lv0_description">0% - 10% of battary remaining</string>
    <string name="widget_icon_lv1_description">11% - 20% of battary remaining</string>
    <string name="widget_icon_lv2_description">21% - 40% of battary remaining</string>
    <string name="widget_icon_lv3_description">41% - 60% of battary remaining</string>
    <string name="widget_icon_lv4_description">61% - 80% of battary remaining</string>
    <string name="widget_icon_lv5_description">81% - 100% of battary remaining</string>
    <string name="widget_icon_charging_ac_description">Charging via AC adapter</string>
    <string name="widget_icon_charging_usb_description">Charging via USB port</string>
    <string name="widget_icon_charging_wireless_description">Charging via wireless charger</string>

</resources>