<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 tag

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical" >

            <android.support.v7.widget.CardView
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/cardview_vertical_margin"
                android:layout_marginLeft="@dimen/cardview_horizontal_margin"
                android:layout_marginRight="@dimen/cardview_horizontal_margin"
                android:layout_marginTop="@dimen/cardview_vertical_margin"
                card_view:cardCornerRadius="0dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/cardview_contents_area_horizontal_space"
                    android:paddingTop="@dimen/cardview_contents_area_vertical_space"
                    android:paddingRight="@dimen/cardview_contents_area_horizontal_space"
                    android:paddingBottom="@dimen/cardview_contents_area_vertical_space"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView_services"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="@dimen/table_textPaddingHorizontal"
                        android:paddingTop="@dimen/table_textPaddingVertical"
                        android:paddingRight="@dimen/table_textPaddingHorizontal"
                        android:paddingBottom="@dimen/table_textPaddingVertical"
                        android:text="@string/text_services"
                        android:textSize="@dimen/table_textSize"
                        android:textStyle="bold" />

                    <TableLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin" >

                        <!-- Divider -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/table_dividerHeight"
                            android:background="@color/colorDivider" />

                        <!-- AppWidgetUpdateService for 1x1 Widget -->
                        <TableRow android:gravity="center">
                            <TextView
                                android:id="@+id/textView_AppWidget1x1UpdateService"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/table_textPaddingHorizontal"
                                android:paddingTop="@dimen/table_textPaddingVertical"
                                android:paddingRight="@dimen/table_textPaddingHorizontal"
                                android:paddingBottom="@dimen/table_textPaddingVertical"
                                android:layout_weight="1"
                                android:text="@string/app_widget_update_service_for_1x1"
                                android:textSize="@dimen/table_textSize"
                                android:textStyle="bold" />
                            <TextView
                                android:id="@+id/textView_AppWidget1x1UpdateServiceValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:paddingLeft="@dimen/table_textPaddingHorizontal"
                                android:paddingTop="@dimen/table_textPaddingVertical"
                                android:paddingRight="@dimen/table_textPaddingHorizontal"
                                android:paddingBottom="@dimen/table_textPaddingVertical"
                                android:text="@string/text_hyphen"
                                android:textSize="@dimen/table_textSize" />
                        </TableRow>

                        <!-- Divider -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/table_dividerHeight"
                            android:background="@color/colorDivider" />

                        <!-- AppWidgetUpdateService for 2x1 Widget -->
                        <TableRow android:gravity="center">
                            <TextView
                                android:id="@+id/textView_AppWidget2x1UpdateService"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/table_textPaddingHorizontal"
                                android:paddingTop="@dimen/table_textPaddingVertical"
                                android:paddingRight="@dimen/table_textPaddingHorizontal"
                                android:paddingBottom="@dimen/table_textPaddingVertical"
                                android:layout_weight="1"
                                android:text="@string/app_widget_update_service_for_2x1"
                                android:textSize="@dimen/table_textSize"
                                android:textStyle="bold" />
                            <TextView
                                android:id="@+id/textView_AppWidget2x1UpdateServiceValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:paddingLeft="@dimen/table_textPaddingHorizontal"
                                android:paddingTop="@dimen/table_textPaddingVertical"
                                android:paddingRight="@dimen/table_textPaddingHorizontal"
                                android:paddingBottom="@dimen/table_textPaddingVertical"
                                android:text="@string/text_hyphen"
                                android:textSize="@dimen/table_textSize" />
                        </TableRow>

                        <!-- Divider -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/table_dividerHeight"
                            android:background="@color/colorDivider" />

                    </TableLayout>

                    <TableLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:layout_marginRight="@dimen/activity_horizontal_margin"
                        android:layout_marginBottom="@dimen/activity_vertical_margin" >

                        <!-- Divider -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/table_dividerHeight"
                            android:background="@color/colorDivider" />

                        <!-- AppWidgetUpdateService for 1x1 Widget -->
                        <TableRow
                            android:id="@+id/tableRow_AppWidgetServiceRestartCycle"
                            android:gravity="center">
                            <TextView
                                android:id="@+id/textView_AppWidgetServiceRestartCycle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="@dimen/table_textPaddingHorizontal"
                                android:paddingTop="@dimen/table_textPaddingVertical"
                                android:paddingRight="@dimen/table_textPaddingHorizontal"
                                android:paddingBottom="@dimen/table_textPaddingVertical"
                                android:layout_weight="1"
                                android:text="@string/app_widget_service_restart_cycle"
                                android:textSize="@dimen/table_textSize"
                                android:textStyle="bold" />
                            <TextView
                                android:id="@+id/textView_AppWidgetServiceRestartCycleValue"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:paddingLeft="@dimen/table_textPaddingHorizontal"
                                android:paddingTop="@dimen/table_textPaddingVertical"
                                android:paddingRight="@dimen/table_textPaddingHorizontal"
                                android:paddingBottom="@dimen/table_textPaddingVertical"
                                android:text="@string/text_hyphen"
                                android:textSize="@dimen/table_textSize" />
                        </TableRow>

                        <!-- Divider -->
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/table_dividerHeight"
                            android:background="@color/colorDivider" />

                    </TableLayout>

                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>